# hf-aria2

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh
.github/workflows/: ci.yml
src/hf_aria/: __init__.py  __main__.py  cli.py  downloader.py  resolver.py
src/hf_aria2/: __init__.py  __main__.py  cli.py  downloader.py  resolver.py
