[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-aria2"
version = "0.2.5"
description = "Fast HuggingFace downloader using aria2c — cache-compatible with huggingface_hub"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.23.0",
]
authors = [
    { name = "joaoeudes7" },
]

[project.scripts]
hf-aria2 = "hf_aria2:main"

[project.optional-dependencies]
aria2 = ["aria2>=0.0.1b0"]

[tool.hatch.build.targets.wheel]
packages = ["src/hf_aria2"]
